--- a/estilo.css
+++ b/estilo.css
@@ -35,7 +35,7 @@ body
 {
 	border: 2px solid black;
 	border-radius: 4px;
-	width: 80%;
+	width: 75%;
 	height: 600px;
 	margin: 0 auto;
 	background-color: #BFE1FE;
@@ -79,10 +79,16 @@ body
 	display: none;
 	background-color: white;
 	border: 2px solid #D6D6D6;
-	border-radius: 12px;
+	border-radius: 16px;
 	width: 30%;
 	padding: 0.2em;
 }
 #dialog-confirm{
 	display:none;
+}
+.rombo{
+	vertical-align: middle;
+}
+.draggable{
+	vertical-align: middle;
 }
