--- a/estilo.css
+++ b/estilo.css
@@ -108,3 +108,17 @@ th{
 td{
 	background-color: white;
 }
+
+#restart{
+	background-color: #97FF8F;
+	display: block;
+	margin-top: 1em;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 1.5em;
+	font-size: 1em;
+	border: 2px solid #0CA400;
+	border-radius: 16px;
+	cursor: pointer;
+
+}
