--- a/Juego2/estilo.css
+++ b/Juego2/estilo.css
@@ -7,7 +7,7 @@
 }
 h1
 {
-	
+
 	text-align: center;
 }
 button{
@@ -63,4 +63,35 @@ button:hover{
 	left: 300px;
 	position: absolute;
 	width: 100px;
+}
+
+#result-table, th, td{
+	margin: 0 auto;
+	margin-top: 1%;
+	border: 1px solid black;
+	border-collapse: collapse;
+	text-align: center;
+}
+th, td{
+	padding: 10px;
+}
+th{
+	background-color: #9C9C9C;
+}
+td{
+	background-color: white;
+}
+
+#restart{
+	background-color: #97FF8F;
+	display: block;
+	margin-top: 1em;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 1.5em;
+	font-size: 1em;
+	border: 2px solid #0CA400;
+	border-radius: 16px;
+	cursor: pointer;
+
 }
