--- a/Juego2/estilo.css
+++ b/Juego2/estilo.css
@@ -17,7 +17,7 @@ button{
 	padding: 1em;
 	border-radius: 10px;
 }
-button:hover{
+button:hover, button:focus{
 	background-color: #4286f4;
 }
 .container
@@ -63,6 +63,17 @@ button:hover{
 	left: 300px;
 	position: absolute;
 	width: 100px;
+}
+#modalError{
+	margin: 0 auto;
+	color: red;
+	text-align: center;
+	display: none;
+	background-color: white;
+	border: 2px solid #D6D6D6;
+	border-radius: 16px;
+	width: 30%;
+	padding: 0.2em;
 }
 
 #result-table, th, td{
