--- a/Ordenar/estilo.css
+++ b/Ordenar/estilo.css
@@ -50,7 +50,7 @@ h3{
 	text-align: center; 
 	background-color: white;
 }
-#sortable li:hover{
+#sortable li:hover, #sortable li:focus{
 	cursor: pointer;
 	background-color: #f2f2f2; 
 }
@@ -74,7 +74,7 @@ h3{
   	display: inline-block;
   	font-size: 16px;
 }
-.boton:hover{
+.boton:hover, .boton:focus{
 	background-color: #4C8F70;
 	cursor: pointer;
 }
